ui changes and added market view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Axolotyl">
         <activity
+            android:name=".marketviewfull"
+            android:exported="true" />
+        <activity
             android:name=".signintestview"
             android:exported="true" />
         <activity
